[package]
name = "learn-rust-with-tests"
version = "0.1.0"
authors = ["pavansoundara <pavansoundara@gmail.com>"]
edition = "2018"

[[bin]]
name = "hello_world"
path = "src/hello_world/main.rs"

[[bin]]
name = "integers"
path = "src/integers/main.rs"

[[bin]]
name = "iteration"
path = "src/iteration/main.rs"

[[bin]]
name = "arrays"
path = "src/arrays/main.rs"

[[bin]]
name = "structs_methods_and_interfaces"
path = "src/structs_methods_and_interfaces/main.rs"

[[bin]]
name = "pointers_and_errors"
path = "src/pointers_and_errors/main.rs"

[dependencies]
